made profile endpoint
