# server/routes/authRoutes.js
@@ -2,19 +2,20 @@ const express = require('express');
 const { body, query } = require('express-validator');
 
 const { catchAsyncErrors } = require('../helpers/errorHandlers');
-const { login, register, checkToken, checkExistEmail } = require('../controllers/authController');
+const { login, register, checkToken, checkExistUsername } = require('../controllers/authController');
 
 const router = express.Router();
 
-router
-  .route('/register')
-  .post(
-    [
-      body('email', 'Please include a valid email').isEmail(),
-      body('password', 'Please enter a password with 6 or more characters').isLength({ min: 6 }),
-    ],
-    catchAsyncErrors(register)
-  );
+router.route('/register').post(
+  [
+    body('email', 'Please include a valid email').isEmail(),
+    body('password', 'Please enter a password with 6 or more characters').isLength({ min: 6 }),
+    body('username', 'Username is required')
+      .not()
+      .isEmpty(),
+  ],
+  catchAsyncErrors(register)
+);
 
 router.route('/login').post(
   [
@@ -29,6 +30,13 @@ router.route('/login').post(
 );
 
 router.route('/checkToken').get(checkToken);
-router.route('/checkExistEmail').get([query('email').isEmail()], catchAsyncErrors(checkExistEmail));
+router.route('/checkExistUsername').get(
+  [
+    query('username')
+      .not()
+      .isEmpty(),
+  ],
+  catchAsyncErrors(checkExistUsername)
+);
 
 module.exports = router;
